crates/scorecard/tests/trybuild/bdd_skip_count_red_without_detail_must_fail.stderr
error[E0061]: this function takes 6 arguments but 5 arguments were supplied
  --> tests/trybuild/bdd_skip_count_red_without_detail_must_fail.rs:13:16
   |
13 |     let _row = Row::bdd_skip_count_red(common, 250, 12, Vec::new(), "12 skipped / 250".to_string());
   |                ^^^^^^^^^^^^^^^^^^^^^^^------------------------------------------------------------- argument #6 of type `String` is missing
   |
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn bdd_skip_count_red(
   |            ^^^^^^^^^^^^^^^^^^
help: provide the argument
   |
13 |     let _row = Row::bdd_skip_count_red(common, 250, 12, Vec::new(), "12 skipped / 250".to_string(), /* String */);
   |                                                                                                   ++++++++++++++
